tests/ui/compile-fail/pinned_drop/unexpected_additional_item.stderr
error: no rules expected keyword `const`
  --> tests/ui/compile-fail/pinned_drop/unexpected_additional_item.rs:10:5
   |
10 |     const BAZ: usize = 0;
   |     ^^^^^ no rules expected this token in macro call
   |
note: while trying to match `)`
  --> src/macros.rs
   |
   |         ),
   |         ^
